feat: expose user preferences api
